<?xml version="1.0"?>
<package format="2">
	<name>kungfu</name>
	<version>0.0.0</version>
	<description/>
	<maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
	<maintainer email="david@metrorobots.com">Dåvíď V. Ŀü¡¡</maintainer>
	<maintainer email="david@probablydavid.com">戴维</maintainer>
	<license>BSD 3-clause</license>
	<buildtool_depend>ament_cmake</buildtool_depend>
</package>
