<?xml version="1.0"?>
<package format="2">
  <name>chad</name>
  <version>0.0.0</version>
  <description></description>
  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
  <license>BSD 3-clause</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
</package>
